--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,29 +14,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-21 Fri 12:17]
+#+CAPTION: Clock summary at [2016-10-21 Fri 20:12]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *74:42* |       |       | 100.0 |
+| *Total time*                                                                | *75:49* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 74:42   |       |       | 100.0 |
-| Active                                                                      |         | 74:42 |       | 100.0 |
+| Stories                                                                     | 75:49   |       |       | 100.0 |
+| Active                                                                      |         | 75:49 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.4 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.6 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   1.7 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.1 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   5.4 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   5.3 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.4 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   1.6 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  20.3 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  20.0 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.6 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.3 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.2 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  15.8 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  15.6 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.4 |
-| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   2.5 |
+| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   2.4 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   1.6 |
 | COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   2.2 |
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.4 |
@@ -44,12 +44,13 @@
 | COMPLETED Remove service stereotype                                         |         |       |  3:32 |   4.7 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.1 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.1 |
-| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   2.8 |
+| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   2.7 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   3.7 |
-| COMPLETED Perform the archetype / artefact renames                          |         |       | 12:12 |  16.3 |
+| COMPLETED Perform the archetype / artefact renames                          |         |       | 12:12 |  16.1 |
 | COMPLETED Rename file formatter to artefact formatter                       |         |       |  1:20 |   1.8 |
+| COMPLETED Fix remaining issues with assistant API                           |         |       |  1:07 |   1.5 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.6 |
-| STARTED Document the conceptual model                                       |         |       |  5:48 |   7.8 |
+| STARTED Document the conceptual model                                       |         |       |  5:48 |   7.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -725,6 +726,16 @@ Notes:
     CLOCK: [2016-10-21 Fri 10:55]--[2016-10-21 Fri 11:25] =>  0:30
 
 It seems this was missed in the great rename.
+
+*** COMPLETED Fix remaining issues with assistant API                 :story:
+    CLOSED: [2016-10-21 Fri 20:08]
+    CLOCK: [2016-10-21 Fri 19:35]--[2016-10-21 Fri 20:07] =>  0:32
+    CLOCK: [2016-10-21 Fri 12:35]--[2016-10-21 Fri 12:44] =>  0:09
+    CLOCK: [2016-10-21 Fri 12:18]--[2016-10-21 Fri 12:34] =>  0:16
+    CLOCK: [2016-10-21 Fri 12:07]--[2016-10-21 Fri 12:17] =>  0:10
+
+We left a few cases of formatter calls because they were resulting in
+test breaks. Get to the bottom of those.
 
 *** STARTED Introduce artefact sources                                :story:
 
