--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-02 Wed 10:17]
+#+CAPTION: Clock summary at [2016-11-02 Wed 10:53]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *31:34* |       |      | 100.0 |
+| *Total time*                                                                | *32:09* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 31:34   |       |      | 100.0 |
-| Active                                                                      |         | 31:34 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.2 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   7.7 |
+| Stories                                                                     | 32:09   |       |      | 100.0 |
+| Active                                                                      |         | 32:09 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.1 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   7.6 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.7 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   2.0 |
-| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   2.0 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  22.2 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  10.1 |
+| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.9 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  21.8 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   9.9 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.7 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   8.4 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   8.3 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.6 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  12.0 |
-| STARTED Changes to stitch to accommodate wale                               |         |       | 8:21 |  26.5 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  11.8 |
+| STARTED Changes to stitch to accommodate wale                               |         |       | 8:56 |  27.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -279,6 +279,7 @@ When we implemented profiles we didn't add them to stitch. Add them
 and remove all duplication from stitch templates.
 
 *** STARTED Changes to stitch to accommodate wale                     :story:
+    CLOCK: [2016-11-02 Wed 10:18]--[2016-11-02 Wed 10:53] =>  0:35
     CLOCK: [2016-11-02 Wed 09:35]--[2016-11-02 Wed 10:17] =>  0:42
     CLOCK: [2016-11-01 Tue 19:43]--[2016-11-01 Tue 20:25] =>  0:42
     CLOCK: [2016-11-01 Tue 19:09]--[2016-11-01 Tue 19:42] =>  0:33
