--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,27 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-02 Wed 11:33]
+#+CAPTION: Clock summary at [2016-11-02 Wed 12:01]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *32:47* |       |      | 100.0 |
+| *Total time*                                                                | *33:16* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 32:47   |       |      | 100.0 |
-| Active                                                                      |         | 32:47 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.8 |
+| Stories                                                                     | 33:16   |       |      | 100.0 |
+| Active                                                                      |         | 33:16 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.1 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   7.4 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   7.3 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.7 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.9 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.9 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  21.4 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   9.7 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  21.0 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   9.6 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.7 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   8.1 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   8.0 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.5 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  11.6 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  29.2 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  11.4 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  28.8 |
+| STARTED Implement formatter implementation using stitch and wale            |         |       | 0:29 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -361,6 +362,12 @@ Notes:
 - stitch wale formatter seems to work as expected. Added:
 
 : #DOGEN quilt.cpp.types.class_implementation.formatting_style=stitch_wale
+
+*** STARTED Implement formatter implementation using stitch and wale  :story:
+    CLOCK: [2016-11-02 Wed 11:32]--[2016-11-02 Wed 12:01] =>  0:29
+
+Now we have all the pieces in place, we need to start updating the
+templates one by one to use stitch and wale.
 
 *** Merge properties factory with stitching factory                   :story:
 
