--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 10:37]
+#+CAPTION: Clock summary at [2016-11-03 Thu 10:42]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *42:11* |       |      | 100.0 |
+| *Total time*                                                                | *42:15* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 42:11   |       |      | 100.0 |
-| Active                                                                      |         | 42:11 |      | 100.0 |
+| Stories                                                                     | 42:15   |       |      | 100.0 |
+| Active                                                                      |         | 42:15 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   2.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.9 |
 | COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.8 |
@@ -34,12 +34,12 @@
 | COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.3 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.2 |
 | COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.0 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  22.7 |
-| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  11.9 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  22.6 |
+| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  11.8 |
 | COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.7 |
 | COMPLETED Fix borked build due to seam errors                               |         |       | 0:12 |   0.5 |
 | COMPLETED Various fixes due to stitch changes                               |         |       | 0:22 |   0.9 |
-| STARTED Implement formatter implementation using stitch and wale            |         |       | 0:36 |   1.4 |
+| STARTED Implement formatter implementation using stitch and wale            |         |       | 0:40 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -417,6 +417,7 @@ notice it locally due to the usual caching of test data.
   part of the clean up on stitch. However, it is borked now.
 
 *** STARTED Implement formatter implementation using stitch and wale  :story:
+    CLOCK: [2016-11-03 Thu 10:38]--[2016-11-03 Thu 10:42] =>  0:04
     CLOCK: [2016-11-03 Thu 10:01]--[2016-11-03 Thu 10:37] =>  0:36
 
 Now the templates have been merged we can start to look into using
